haste-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: haste-server
  labels:
    app: haste-server
spec:
  ports:
  - port: 7777
    targetPort: 7777
    protocol: TCP
    name: http
  selector:
    app: haste-server
